--- a/charleston/index.html
+++ b/charleston/index.html
@@ -14,44 +14,31 @@
   </head>
   <body data-page="home">
     <main class="app">
-      <header class="app-header">
-        <div class="header-copy">
-          <p class="eyebrow">Charleston County Actions</p>
-          <h1>Public actions, gatherings, and outcomes - in time order.</h1>
-          <p class="lede">
-            Scroll to move one event at a time. Each stop shows the group behind
-            the event, the public actions available, and for past events, the
-            media and summaries captured afterward.
-          </p>
-        </div>
-        <div class="legend">
-          <span class="legend-dot"></span>
-          <span>Timeline</span>
-        </div>
-      </header>
-
-      <section class="welcome">
-        <div class="welcome-card card">
-          <h2>Welcome</h2>
-          <p class="lede">
-            This site catalogs public actions in Charleston County. Choose a
-            timeline to explore upcoming events or browse past events in reverse
-            chronological order.
-          </p>
-          <div class="welcome-links">
-            <a class="primary-link" href="upcoming.html">Upcoming events timeline</a>
-            <a class="secondary-link" href="past.html">Past events timeline</a>
+      <section class="home-grid">
+        <div class="home-left">
+          <div class="welcome-card card">
+            <p class="eyebrow">Charleston County Actions</p>
+            <h1>Public actions, gatherings, and outcomes - in time order.</h1>
+            <p class="lede">
+              This site catalogs public actions in Charleston County. Choose a
+              timeline to explore upcoming events or browse past events in
+              reverse chronological order.
+            </p>
+            <div class="welcome-links">
+              <a class="primary-link" href="upcoming.html">Upcoming events timeline</a>
+              <a class="secondary-link" href="past.html">Past events timeline</a>
+            </div>
           </div>
         </div>
-      </section>
 
-      <section class="groups-section">
-        <div class="section-head">
-          <h2>Groups tracked</h2>
-          <p class="lede">All organizations currently represented in the data.</p>
-        </div>
-        <div id="group-list" class="group-list">
-          <div class="loading" id="loading">Loading groups...</div>
+        <div class="groups-section home-right">
+          <div class="section-head">
+            <h2>Groups tracked</h2>
+            <p class="lede">All organizations currently represented in the data.</p>
+          </div>
+          <div id="group-list" class="group-list">
+            <div class="loading" id="loading">Loading groups...</div>
+          </div>
         </div>
       </section>
 
