Load events live from RSS and match actions by title

--- a/charleston/past.html
+++ b/charleston/past.html
@@ -12,7 +12,7 @@
     />
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <body data-page="timeline" data-timeline="past">
+  <body data-page="timeline" data-timeline="past" data-events="rss">
     <main class="app">
       <header class="app-header">
         <div class="header-copy">
@@ -36,8 +36,8 @@
 
       <footer class="app-footer">
         <p>
-          Data sources: <code>events.csv</code>, <code>groups.csv</code>,
-          <code>event_actions.csv</code>, <code>action_types.csv</code>,
+          Data sources: RSS feed, <code>groups.csv</code>,
+          <code>rss_actions.csv</code>, <code>action_types.csv</code>,
           <code>media.csv</code>, and <code>recaps/</code>.
         </p>
       </footer>
